<resources>
    <string name="app_name">Wordle</string>
    <string name="clear">Clear</string>
    <string name="add_word">Add Word</string>
    <string name="restart">Restart</string>
    <string name="submit">Submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_back">Go Back</string>
    <string name="enter_word">Enter Word</string>
</resources>