<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateWord">

    <Button
        android:id="@+id/add_word_button2"
        android:layout_width="164dp"
        android:layout_height="65dp"
        android:layout_marginStart="119dp"
        android:layout_marginTop="343dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="31dp"
        android:text= "@string/add_word"
        app:layout_constraintBottom_toTopOf="@+id/go_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go_back_button"
        android:layout_width="117dp"
        android:layout_height="67dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="225dp"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_word_button2" />

    <EditText
        android:id="@+id/word_box"
        android:layout_width="260dp"
        android:layout_height="97dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="161dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="70dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/enter_word"
        app:layout_constraintBottom_toTopOf="@+id/add_word_button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>