<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="Autofill, LabelFor"
    android:id="@+id/my_parent_layout"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:id="@+id/my_box_grid_GL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:columnCount="5"
            android:rowCount="6"
            android:useDefaultMargins="true"
            android:layout_gravity="center"
            >

            <EditText
                android:id="@+id/editText"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />

            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />

            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />
            <EditText style="@style/Widget.AppCompat.EditText" />

        </GridLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/submit" />

        <Button
            android:id="@+id/restart_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/restart" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/clear" />

        <Button
            android:id="@+id/add_word_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_word" />

    </LinearLayout>

</ScrollView>
